# continue_test

./: Dockerfile  README.md  pyproject.toml
src/my_package/: __init__.py  core.py
tests/: __init__.py  test_core.py
